# git-authorship

./: .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  authorship-overrides.txt  authorship_analyzer.py  mpl-dual-licensors.graphql  people-license-dict  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: precommit.yml
config/: .gitignore  author-licenses.txt  author-licenses.txt.dist  pseudonyms.txt.dist
git_authorship/: __init__.py  __main__.py  _pathutils.py  _types.py  authorship.py  authorship_analyzer.py  cli.py  config.py  exceptions.py  export.py
repo/: .gitignore
test/: test_authorship_analyzer.py  test_cli.py  test_config_licenses.py  test_config_pseudonyms.py  test_e2e.py  test_e2e_ignore_patterns.py  test_e2e_ignore_revs.py  test_e2e_mailmap.py  test_export_as_json.py
test/fixtures/: licensing.csv  pseudonyms.csv  tmp_dir_factory.py  tmp_file.py  tmp_repo.py
test/snapshots/test_e2e/test_full_workflow/: authorship.csv  authorship.json
test/snapshots/test_e2e/test_full_workflow_with_author_licenses/: authorship.csv
test/snapshots/test_e2e/test_typical_workflow/: authorship.csv
test/snapshots/test_e2e/test_workflow_with_author_licenses/: authorship.csv
test/snapshots/test_e2e/test_workflow_with_config_changes/: authorship_1.csv
test/snapshots/test_e2e/test_workflow_with_pseudonyms/: authorship.csv
test/snapshots/test_e2e_ignore_patterns/test_ignore_patterns_dont_appear_in_authorship/: authorship.csv
test/snapshots/test_e2e_ignore_revs/test_custom_ignored_revs_file_dont_appear_in_authorship/: authorship.csv
test/snapshots/test_e2e_ignore_revs/test_ignored_revs_dont_appear_in_authorship/: authorship.csv
test/snapshots/test_e2e_mailmap/test_mailmap_considred_in_authorship/: authorship.csv
